[package]
name = "nokia3310-jam-3-game"
version = "0.1.0"
authors = [
  "Adarsh Krishnan <adarsh.krishnan@wolt.com>",
  "Olli Paakkunainen <olli@paakkunainen.fi>",
]
edition = "2018"

[features]
default = ["bevy/bevy_winit", "bevy/render", "bevy/bevy_gltf", "bevy/png", "bevy/wav"]
native = ["bevy/bevy_wgpu", "bevy/x11"]
web = ["bevy_webgl2"]


[dependencies.bevy]
git = "https://github.com/bevyengine/bevy"
rev = "1ca8ce4a799af8dab2d926366de9ac3c8d30939c"
default-features = false

[dependencies.bevy_webgl2]
version = "0.4"
optional = true
